--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Suppress error caused by KSP using the old kotlin.sourceSets DSL with AGP 9.0
+android.disallowKotlinSourceSets=false
