--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,14 @@
 [versions]
 agp = "9.0.1"
+androidPdfViewer = "3.2.0-beta.3"
+
 core = "13.0.0"
 coreKtx = "1.17.0"
 ksp = "2.0.21-1.0.28"
 
 hilt = "2.59.2"
 hiltNavigationCompose = "1.3.0"
+
 
 pdfboxAndroid = "2.0.27.0"
 pdfViewer = "1.0.0-alpha13"
@@ -21,6 +24,7 @@ composeBom = "2026.02.00"
 uiViewbinding = "1.10.3"
 
 [libraries]
+android-pdf-viewer = { module = "com.github.mhiew:android-pdf-viewer", version.ref = "androidPdfViewer" }
 androidx-compose-ui-viewbinding = { module = "androidx.compose.ui:ui-viewbinding", version.ref = "uiViewbinding" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-pdf-viewer = { module = "androidx.pdf:pdf-viewer", version.ref = "pdfViewer" }
@@ -39,7 +43,7 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
-
+androidx-pdf-compose = { group = "androidx.pdf", name = "pdf-compose", version.ref = "pdfViewer" }
 
 
 # Room
